# implementing-the-clean-architecture

./: Dockerfile  README.md  pyproject.toml  requirements_dev.txt
auctioning_platform/: .gitignore  Makefile  config.ini  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  setup.cfg  test_config.ini
auctioning_platform/itca/api/: __init__.py
auctioning_platform/itca/auctions/: __init__.py
auctioning_platform/itca/auctions_infra/: __init__.py
auctioning_platform/itca/customer_relationship/: __init__.py  facade.py
auctioning_platform/itca/db/: __init__.py  base.py  guid.py  jsonb.py
auctioning_platform/itca/event_sourcing/: __init__.py  aggregate_changes.py  concurrent_stream_write_error.py  event.py  event_store.py  event_stream.py  models.py  projection.py  sqlalchemy_event_store.py
auctioning_platform/itca/foundation/: domain_exception.py  event_bus.py  money.py  serde.py  unit_of_work.py
auctioning_platform/itca/main/: __init__.py  event_bus.py
auctioning_platform/itca/payments/: __init__.py  config.py  dao.py  events.py  facade.py  models.py
auctioning_platform/itca/processes/: __init__.py  exceptions.py  locking.py
auctioning_platform/itca/shipping/: __init__.py
auctioning_platform/itca/shipping_infra/: __init__.py
auctioning_platform/itca/tasks/: app.py  celery_injector.py  cli.py
auctioning_platform/tests/: conftest.py
auctioning_platform/tests/auctions/: factories.py
auctioning_platform/tests/auctions_infra/: conftest.py
auctioning_platform/tests/doubles/: in_memory_auctions_repo.py  (+1 more)
diagrams/: 10_4_kite.drawio  (+20 more)
(+101 files in other folders)
